OpenLDAP 2.2 Change Log

OpenLDAP 2.2.28 Engineering
	Fixed slapd shutdown crash on NULL slap_listeners (ITS#3842)
	Fixed back-bdb/hdb - check for BDB TXN patch
	Fixed back-hdb nested modrdn bug (ITS#3857)
	Fixed back-ldap/meta undefined filter propagation (ITS#3785)
	Fixed back-ldap/meta rewrite session memory leak
	Fixed back-ldap abandon leak (ITS#3862)
	Fixed back-meta add w/o parent add (ITS#3804)
	Fixed back-meta control propagation bug (ITS#3813)
	Fixed syncrepl SASL bind crash (ITS#3792)

OpenLDAP 2.2.27 Release
	Fixed back-bdb/hdb slapcat checkpoint on close (ITS#3703)
	Fixed back-bdb/hdb internal error code assert (ITS#3731)
	Fixed back-ldap/back-meta debug output of NULL strings (ITS#3698)
	Fixed back-meta sizelimit bug (ITS#3720)
	Fixed back-meta/backglue sizelimit interaction (ITS#3724)
	Fixed pcache all-attrs bug (ITS#3741)
	Fixed syncrepl runqueue (ITS#3542)
	Fixed ACL dn=* <what> clause
	Fixed ACL val default style parsing crasher (ITS#3700)
	Disabled slapd broken undocumented configuration directive
	Fixed slapcat unclean exits (ITS#3764)
	Fixed libldap sasl connection assert (ITS#3278)
	Build Environment
		Improved thread set stack size support (ITS#3691)

OpenLDAP 2.2.26 Release
	Fixed back-bdb ldapadd ctxcsn crash (ITS#3685)
	Fixed back-hdb search crash (ITS#3688)

OpenLDAP 2.2.25 Release
	Fixed back-hdb out-of-order slapadd (ITS#3267)
	Fixed back-bdb/hdb search crashes (ITS#3638, 3647)
	Fixed back-bdb/hdb modrdn (ITS#3657)
	Fixed back-bdb ctxcsn/LRU bug (ITS#3666)
	Fixed back-dnssrv referral all but search op crasher bug (ITS#3642)
	Fixed back-ldbm shutdown hang (ITS#3648)
	Fixed back-meta memory leak (ITS#3669)
	Fixed back-monitor attribute normalization bug (ITS#3659)
	Removed broken libldap fast synchronous search result processing (ITS#3612)
	Build Environment
		Added improved configure logging (ITS#3605)

OpenLDAP 2.2.24 Release
	Fixed slapd "chldren:" typo (ITS#3560)
	Fixed slapd syncrepl consumer unclean shutdown (ITS#3546)