@@ -3,6 +3,7 @@ OpenLDAP 2.2 Change Log
 OpenLDAP 2.2.28 Engineering
 	Fixed slapd shutdown crash on NULL slap_listeners (ITS#3842)
 	Fixed back-bdb/hdb - check for BDB TXN patch
+	Fixed back-bdb/hdb missing suffix during initialization (ITS#3901)
 	Fixed back-hdb nested modrdn bug (ITS#3857)
 	Fixed back-ldap/meta undefined filter propagation (ITS#3785)
 	Fixed back-ldap/meta rewrite session memory leak
